--- a/extras/RedNoise/CMakeLists.txt
+++ b/extras/RedNoise/CMakeLists.txt
@@ -35,7 +35,9 @@ add_executable(RedNoise
         libs/sdw/TextureMap.cpp
         libs/sdw/TexturePoint.cpp
         libs/sdw/Utils.cpp
-        src/RedNoise.cpp)
+        src/RedNoise.cpp
+        src/libs/Reader_OBJ_MTL.h
+        src/libs/Reader_OBJ_MTL.cpp)
 
 if (MSVC)
     target_compile_options(RedNoise
