--- a/extras/RedNoise/CMakeLists.txt
+++ b/extras/RedNoise/CMakeLists.txt
@@ -35,9 +35,7 @@ add_executable(RedNoise
         libs/sdw/TextureMap.cpp
         libs/sdw/TexturePoint.cpp
         libs/sdw/Utils.cpp
-        src/main.cpp
-        src/libs/Reader_OBJ_MTL.h
-        src/libs/Reader_OBJ_MTL.cpp)
+        src/RedNoise.cpp)
 
 if (MSVC)
     target_compile_options(RedNoise
