--- a/extras/RedNoise/Makefile
+++ b/extras/RedNoise/Makefile
@@ -8,7 +8,7 @@ OBJECT_FILE := $(BUILD_DIR)/$(PROJECT_NAME).o
 EXECUTABLE := $(BUILD_DIR)/$(PROJECT_NAME)
 SDW_DIR := ./libs/sdw/
 GLM_DIR := ./libs/glm-0.9.7.2/
-ALLY_DIR := ./libs/ally/
+ALLY_DIR := ./src/ally/
 SDW_SOURCE_FILES := $(wildcard $(SDW_DIR)*.cpp)
 SDW_OBJECT_FILES := $(patsubst $(SDW_DIR)%.cpp, $(BUILD_DIR)/%.o, $(SDW_SOURCE_FILES))
 ALLY_SOURCE_FILES := $(wildcard $(ALLY_DIR)*.cpp)
