--- a/extras/RedNoise/CMakeLists.txt
+++ b/extras/RedNoise/CMakeLists.txt
@@ -5,14 +5,14 @@
 # Where `Release` can be replaced with `Debug`, which contains gdb and address sanitiser definitions already written for you.
 # Once a build is created, proceed with *compilation*:
 # 
-#   cmake --build build --target RedNoise --config Release # optionally, for parallel build, append -j $(nproc)
+#   cmake --build build --target DrawMain --config Release # optionally, for parallel build, append -j $(nproc)
 #
 # This creates the executable in the build directory. You only need to *generate* a build if you modify the CMakeList.txt file.
 # For any other changes to the source code, simply recompile.
 
 
 cmake_minimum_required(VERSION 3.12)
-project(RedNoise)
+project(DrawMain)
 
 set(CMAKE_CXX_STANDARD 14)
 
@@ -25,7 +25,7 @@ find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS})
 include_directories(libs/sdw)
 
-add_executable(RedNoise
+add_executable(DrawMain
         libs/sdw/CanvasPoint.cpp
         libs/sdw/CanvasTriangle.cpp
         libs/sdw/Colour.cpp
@@ -36,15 +36,12 @@ add_executable(RedNoise
         libs/sdw/TexturePoint.cpp
         libs/sdw/Utils.cpp
         src/DrawMain.cpp
-        src/ally/obj_reader.h
-        src/ally/obj_reader.cpp
         src/ally/raster.cpp
-        src/ally/raster.h
         src/ally/camera_move.cpp
-        src/ally/camera_move.h)
+        src/ally/file_reader.cpp)
 
 if (MSVC)
-    target_compile_options(RedNoise
+    target_compile_options(DrawMain
             PUBLIC
             /W3
             /Zc:wchar_t
@@ -55,7 +52,7 @@ if (MSVC)
         set(SDL2_LIBRARIES SDL2::SDL2 SDL2::SDL2main)
     endif()
 else ()
-    target_compile_options(RedNoise
+    target_compile_options(DrawMain
         PUBLIC
         -Wall
         -Wextra
@@ -68,13 +65,13 @@ else ()
 
     set(DEBUG_OPTIONS -O2 -fno-omit-frame-pointer -g)
     set(RELEASE_OPTIONS -O3 -march=native -mtune=native)
-    target_link_libraries(RedNoise PUBLIC $<$<CONFIG:Debug>:-Wl,-lasan>)
+    target_link_libraries(DrawMain PUBLIC $<$<CONFIG:Debug>:-Wl,-lasan>)
 
 endif()
 
 
-target_compile_options(RedNoise PUBLIC "$<$<CONFIG:RelWithDebInfo>:${RELEASE_OPTIONS}>")
-target_compile_options(RedNoise PUBLIC "$<$<CONFIG:Release>:${RELEASE_OPTIONS}>")
-target_compile_options(RedNoise PUBLIC "$<$<CONFIG:Debug>:${DEBUG_OPTIONS}>")
+target_compile_options(DrawMain PUBLIC "$<$<CONFIG:RelWithDebInfo>:${RELEASE_OPTIONS}>")
+target_compile_options(DrawMain PUBLIC "$<$<CONFIG:Release>:${RELEASE_OPTIONS}>")
+target_compile_options(DrawMain PUBLIC "$<$<CONFIG:Debug>:${DEBUG_OPTIONS}>")
  
-target_link_libraries(RedNoise PRIVATE ${SDL2_LIBRARIES})
+target_link_libraries(DrawMain PRIVATE ${SDL2_LIBRARIES})
