--- a/extras/RedNoise/CMakeLists.txt
+++ b/extras/RedNoise/CMakeLists.txt
@@ -38,7 +38,8 @@ add_executable(DrawMain
         src/DrawMain.cpp
         src/ally/raster.cpp
         src/ally/camera_move.cpp
-        src/ally/file_reader.cpp)
+        src/ally/file_reader.cpp
+        src/memo.cpp)
 
 if (MSVC)
     target_compile_options(DrawMain
