mirror showing original colour... but aside from that it

--- a/extras/RedNoise/CMakeLists.txt
+++ b/extras/RedNoise/CMakeLists.txt
@@ -38,8 +38,7 @@ add_executable(DrawMain
         src/DrawMain.cpp
         src/ally/raster.cpp
         src/ally/camera_move.cpp
-        src/ally/file_reader.cpp
-        src/memo.cpp)
+        src/ally/file_reader.cpp)
 
 if (MSVC)
     target_compile_options(DrawMain
